update production